--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,101 @@
-#root {
-  max-width: 1280px;
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+
+body {
+  background-color: #121212;
+  color: #f5f5f5;
+  padding-top: 56px; /* same as your navbar height */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Quicksand", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+  line-height: 1.2;
+}
+h2{
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+h4{
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 10px;
+
+}
+.btn-primary {
+  background-color: var(--color-primary);
+  font-weight: 600;
+  border-radius: 50px;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  color: #fff;
+}
+img {
+  border-radius: 25px;
+}
+.fullscreen-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.95);
+  color: white;
+  display: none; /* hidden initially */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+
+  display: none; /* ensure it’s hidden */
+}
+
+.fullscreen-menu.open {
+  display: flex; /* show menu when open */
+}
+
+/* Home About us ========================================================= */
+.bm-about-us .bm-profile-picture{
+  position: relative;
+  border-radius: 50%;
+  width: 280px;
+  height: 280px;
   margin: 0 auto;
-  padding: 2rem;
+}
+.bm-skill-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 20px;
+  margin-top: 40px;
+}
+.bm-skill-item {
+  background-color: #313131;
   text-align: center;
+  padding: 30px;
+  border-radius: 10px;
+  transition: all 0.3s ease;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.bm-skill-icon {
+  width: 60px;
+  height: 60px;
+  margin: 0 auto 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
+  border-radius: 50px;
+  color: #fff;
+  font-size: 24px;
 }
