--- a/src/App.css
+++ b/src/App.css
@@ -299,7 +299,7 @@ img {
   color: #ffffff;
   background: linear-gradient(135deg, #ffffff 0%, #a0a0a0 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  /* -webkit-text-fill-color: transparent; */
   background-clip: text;
   line-height: 1.2;
 }
@@ -1062,7 +1062,8 @@ img {
 .portfolio-image {
   position: relative;
   overflow: hidden;
-  background: var(--secondary-dark);
+  background-color: #fff;
+  padding: 1rem;
   aspect-ratio: 4/3;
   border-radius: 0;
 }
@@ -1162,4 +1163,7 @@ img {
   .portfolio-section {
     padding: 60px 0;
   }
+}
+.bm-hightlight {
+  color: #ffc300;
 }
