--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,9 @@ h4 {
   transition: all 0.3s ease;
   color: #fff;
 }
-img {
+/* img {
   border-radius: 25px;
-}
+} */
 
 /* Navbar ========================================================= */
 /* Navbar transitions */
@@ -64,7 +64,11 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, rgba(0, 0, 0, 0.98) 0%, rgba(20, 20, 20, 0.98) 100%);
+  background: linear-gradient(
+    135deg,
+    rgba(0, 0, 0, 0.98) 0%,
+    rgba(20, 20, 20, 0.98) 100%
+  );
   backdrop-filter: blur(10px);
   color: white;
   display: flex;
@@ -150,7 +154,7 @@ img {
 
 /* Hover effect for links */
 .fullscreen-menu a::before {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -5px;
   left: 50%;
@@ -177,7 +181,7 @@ img {
     font-size: 2rem;
     margin: 15px 0;
   }
-  
+
   .fullscreen-menu .close-btn {
     top: 20px;
     right: 20px;
@@ -1062,16 +1066,25 @@ img {
 .portfolio-image {
   position: relative;
   overflow: hidden;
-  background-color: #fff;
-  padding: 1rem;
+  background: #2a7b9b;
+  background: linear-gradient(
+    90deg,
+    rgba(42, 123, 155, 1) 0%,
+    rgba(87, 199, 133, 1) 50%,
+    rgba(237, 221, 83, 1) 100%
+  );
+  padding: 1.5rem;
   aspect-ratio: 4/3;
   border-radius: 0;
+  border-radius: 20px;
 }
 
 .portfolio-image img {
+  border-radius: 6px;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   transition: transform 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
