--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,9 @@ h4 {
   .bm-spacer {
     margin-top: 4rem;
   }
+  .bm-spacer-two {
+    margin-top: 6rem;
+  }
 
   /* Your CSS for large devices */
 }
@@ -242,9 +245,6 @@ h4 {
     margin: 12px 0;
   }
 }
-
-
-
 
 .bm-highlight {
   color: #ff008c;
